# logo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  countlines.sh  layout.md
cmake_modules/: FindRAGEL.cmake  launch-c.in  launch-cxx.in
doc/: language.cpp  lexer.cpp
gui/: CMakeLists.txt  main.cpp
lib/logo/: CMakeLists.txt  color.cpp  color.hpp  line.cpp  line.hpp  logo.hpp  point.cpp  point.hpp  state.hpp  turtle.cpp  turtle.hpp
lib/logo/detail/: Epsilon.hpp  interpolate.hpp  utility.hpp
lib/logo/errors/: VMValueException.hpp  syntaxexception.hpp
lib/logo/language/lexer/: CMakeLists.txt  helper.hpp  lexer.cpp  lexer.hpp  lexer2.rl  lexer3.cpp  tokenclass.cpp  tokenclass.hpp  tokens.cpp  tokens.hpp  tokentype.hpp
lib/logo/language/parser/: CMakeLists.txt  ast.cpp  ast.hpp  astbase.cpp
lib/logo/language/parser/detail/: ast_prelude.hpp
lib/logo/language/parser/node_types/: AddSub.cpp  ArrayAccessAST.cpp  AssignmentAST.cpp  AtomAST.cpp  BinaryOpAST.cpp  BlockAST.cpp  BooleanAST.cpp  CMakeLists.txt  CallAST.cpp  ComparisonAST.cpp  ConstantLiteralAST.cpp  ExponentExpr.cpp  ExpressionAST.cpp  FileAST.cpp  ForLoopAST.cpp  FunctionAST.cpp  IfElseAST.cpp  LValueAST.cpp  MultDiv.cpp  NotAST.cpp  RValueAST.cpp  ReturnAST.cpp  StatementAST.cpp  VariableDecAST.cpp  VariableNameAST.cpp  WhileLoopAST.cpp
lib/logo/vm/: CMakeLists.txt  String.cpp  bytecode.cpp  bytecode.hpp  function.hpp  gc.cpp  gc.hpp  program.cpp  program.hpp  stack.cpp  stack.hpp  vm.hpp
tests/: CMakeLists.txt  lexer.cpp  lexer2.cpp  parser.cpp  parsetester.cpp  tokens.cpp  turtle.cpp  vm.cpp
tests/fuzzing/: CMakeLists.txt  fuzzer.cpp
tests/fuzzing/testcases/: fibonacci.logo  test1.logo  test2.logo  test3.logo  test4.logo
tests/vm/: CMakeLists.txt  Number.cpp  Program.cpp  String.cpp  bytecode.cpp  util.hpp
