cmake_minimum_required(VERSION 3.12..3.15)
project(logoaway VERSION 0.0.0
  DESCRIPTION "Lol, 'logo'"
  LANGUAGES C CXX)
include(CMakeDependentOption)
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake_modules)
find_package(RAGEL 6.10 REQUIRED)
# Make target_sources respect where the CMakeLists file is per
# https://crascit.com/2016/01/31/enhanced-source-file-handling-with-target_sources/
cmake_policy(SET CMP0076 NEW)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_POLICY_DEFAULT_CMP0069 NEW) #enable interprocedural optimization for all projects
set(BUILD_SHARED_LIBS OFF)
option(BUILD_TESTS "Build tests of logo runner" OFF)
option(BUILD_LOGO_DOCS "Build the docs" OFF)
option(BUILD_FUZZ "Build fuzzed executable" OFF)
option(BUILD_LOGO_GUI "Build Gui executable" OFF)
option(LOGO_DEBUG_LEXER "Build the lexer with some print statements that might be helpful when debugging problems"
       OFF)
option(BUILD_WITH_COVERAGE "Build with coverage" OFF)
#RAGEL_TARGET(logo2 ${CMAKE_CURRENT_SOURCE_DIR}/lib/logo/language/lexer/lexer2.rl
#             ${CMAKE_SOURCE_DIR}/lib/logo/language/lexer/lexer2.cpp)
add_library(logo STATIC ${RAGEL_logo2_OUTPUTS})
if(LOGO_DEBUG_LEXER)
  target_compile_definitions(logo PRIVATE DEBUG_LEXER)
endif()
if(BUILD_LOGO_GUI)
  add_subdirectory("extern/SFML")
  add_executable(logoaway)
  target_include_directories(logoaway PRIVATE ${CMAKE_SOURCE_DIR}/extern/SFML/include)
  target_link_libraries(logoaway sfml-graphics sfml-window logo)
  add_subdirectory(gui)
  target_include_directories(logoaway
    PRIVATE extern/SFML/include
            ${CMAKE_SOURCE_DIR}/lib
  )
endif()
if(BUILD_LOGO_DOCS)
  CMAKE_DEPENDENT_OPTION(BUILD_LATEX_DOCS "Build latex output" OFF
                         "BUILD_LOGO_DOCS" off)
  if(BUILD_LATEX_DOCS)
    set(DOXYGEN_GENERATE_LATEX ON)
  else()
    set(DOXYGEN_GENERATE_LATEX OFF)
  endif()
  SET(DOXYGEN_EXTRACT_STATICS YES)
  find_package(Doxygen REQUIRED dot)
  doxygen_add_docs(logo_docs ${PROJECT_SOURCE_DIR}/lib ${PROJECT_SOURCE_DIR}/doc)
endif()
target_link_libraries(logo)


add_subdirectory(lib/logo)
if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
  target_compile_options(logo PUBLIC "-fno-omit-frame-pointer" "-fsanitize=address")
endif()
if(BUILD_FUZZ)
  add_executable(logofuzz)
  target_link_libraries(logofuzz PRIVATE logo)
  target_include_directories(logofuzz PRIVATE ${CMAKE_SOURCE_DIR}/lib/logo)
  add_subdirectory(tests/fuzzing)
  add_compile_options("-fstack-protector-strong")
  target_compile_options(logofuzz PUBLIC "-rdynamic")
  target_compile_options(logo PUBLIC "-rdynamic")
endif()
if(BUILD_TESTS)
  enable_testing()
  add_subdirectory(tests)
endif()
if(BUILD_WITH_COVERAGE)
  target_link_libraries(logo "-fprofile-arcs -ftest-coverage --coverage")
  target_compile_options(logo PUBLIC "-fprofile-arcs" "-ftest-coverage" "--coverage")
  target_compile_options(logo_test PUBLIC  "-fprofile-arcs" "-ftest-coverage" "--coverage")
  message("whoo")
endif()
