add_executable(logo_test main.cpp turtle.cpp lexer.cpp tokens.cpp lexer2.cpp parser.cpp)
target_link_libraries(logo_test logo)
target_include_directories(logo_test PRIVATE ${CMAKE_SOURCE_DIR}/lib)
add_test(logo_test ${CMAKE_CURRENT_BINARY_DIR}/logo_test)
if(BUILD_WITH_COVERAGE)
  target_link_libraries(logo_test "-fprofile-arcs -ftest-coverage --coverage")
  message("Building with coverage!!")
endif()